<resources>
    <string name="app_name">健康监护</string>
    <string name="user_name">账号：</string>
    <string name="password">密码：</string>
    <string name="user_account">请输入账号:</string>
    <string name="user_password">请输入密码:</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码？点击找回</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="find_password">找回密码</string>
    <string name="name">姓名：</string>
    <string name="input_name">请输入姓名：</string>
    <string name="age">年龄：</string>
    <string name="input_age">请输入年龄：</string>
    <string name="sex">性别：</string>
    <string name="input_heighth">请输入身高：</string>
    <string name="height">身高：</string>
    <string name="weight">体重：</string>
    <string name="input_weighth">请输入体重：</string>
    <string name="tel">手机号码：</string>
    <string name="input_tel">请输入手机号码：</string>
    <string name="mail">邮箱地址：</string>
    <string name="input_mail">请输入邮箱地址</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submit">提交</string>
    <string name="skip">跳过</string>
    <string name="password_protect">设置密保问题：</string>
    <string name="mobile">你的手机号码是：</string>
    <string name="question">请输入密保问题:</string>
    <string name="protect_answer">设置答案:</string>
    <string name="answer">请输入密保答案</string>
    <string name="init">登录/注册</string>
    <string name="personal_center">个人中心</string>
    <string name="about_settings">相关设置</string>
    <string name="increase_linkman">添加联系人</string>
    <string name="personal_health">个人健康</string>
    <string name="bind_device">绑定设备</string>
    <string name="everyday_event">每日事件</string>
    <string name="search_device">搜索设备</string>
    <string name="find_question">问题：</string>
    <string name="find_answer">答案：</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="sure_new_password">确认新密码：</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="update_new_data">输入新数据：</string>
    <string name="input_old_password">输入旧密码：</string>
    <string name="health_news">健康资讯</string>
    <string name="health_monitor">健康监护</string>
    <string name="protect_heath">呵护您的健康</string>
    <string name="modify_password">修改密码</string>
    <string name="health_deatail">健康资讯</string>
    <string name="upload_image">上传头像</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
