<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/input_name"
            android:layout_alignBaseline="@+id/input_name"
            android:hint="@string/input_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:maxLines="1">
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/input_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/input_name"
            android:layout_below="@+id/input_name"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/input_age"
            android:layout_alignBaseline="@+id/input_age"
            android:hint="@string/input_age"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/select_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/input_age"
            android:layout_below="@+id/input_age"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/check_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/select_sex"
            android:layout_below="@+id/edit_age"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_alignTop="@+id/select_sex"
            >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/input_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/select_sex"
            android:layout_below="@+id/select_sex"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_tel"
            android:layout_marginTop="20dp"
            android:hint="@string/input_tel"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_alignLeft="@+id/input_tel"
            android:layout_marginRight="10dp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/input_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/input_tel"
            android:layout_below="@+id/edit_tel"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_mail"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/input_mail"
            android:layout_alignLeft="@id/input_mail"
            android:layout_marginTop="10dp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/input_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/input_mail"
            android:layout_below="@+id/edit_mail"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/input_height"
            android:layout_alignBaseline="@+id/input_height"
            android:hint="@string/input_heighth"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/input_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/input_height"
            android:layout_below="@+id/input_height"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/input_weight"
            android:layout_alignBaseline="@+id/input_weight"
            android:hint="@string/input_weighth"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:maxLines="1"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/input_weight"
            android:layout_alignLeft="@+id/input_weight"
            android:layout_alignRight="@+id/edit_weight"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</ScrollView>
</LinearLayout>

