<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/linkman_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_name" />

    <EditText
        android:id="@+id/input_linkman_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1">

        <requestFocus/>
    </EditText>


    <TextView
        android:id="@+id/linkman_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_tel"/>

    <EditText
        android:id="@+id/input_linkman_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/linkman_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_mail"/>

    <EditText
        android:id="@+id/input_linkman_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
</LinearLayout>