<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/old_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_old_password" />

    <EditText
        android:id="@+id/old_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1">

        <requestFocus/>
    </EditText>


    <TextView
        android:id="@+id/new_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_new_password"/>

    <EditText
        android:id="@+id/new_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/new_password_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_new_password"/>

    <EditText
        android:id="@+id/new_sure_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

</LinearLayout>