<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/find_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/account_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/find_account"
        android:layout_alignBaseline="@+id/find_account"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/find_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_question"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/find_account"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/find_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/find_question"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/find_question"/>

    <EditText
        android:id="@+id/question_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/find_question"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/find_question"
        android:textSize="20sp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/answer_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/find_answer"
        android:textColor="@color/black"
        android:layout_alignBaseline="@+id/find_answer"
        android:textSize="20sp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/find_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/answer_find"
        android:layout_alignLeft="@+id/find_answer"
        android:textColor="@color/white"/>

</RelativeLayout>
