<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/input_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_new_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@+id/input_new_password"
        android:layout_alignLeft="@+id/input_new_password"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/sure_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_new_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/edit_new_password"
        android:layout_alignLeft="@+id/input_new_password"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/sure_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@+id/sure_new_password"
        android:layout_alignLeft="@+id/input_new_password"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/submit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/input_new_password"
        android:layout_alignRight="@+id/sure_edit_password"
        android:layout_centerVertical="true"/>
</RelativeLayout>
