<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/rd_bk">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <FrameLayout
                android:id="@+id/main_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            </LinearLayout>


        <RelativeLayout
            android:id="@+id/rd_bk"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true">

            <RadioGroup
                android:id="@+id/rd_group"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_menu_health"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/health"
                    android:text="@string/personal_health" />

                <RadioButton
                    android:id="@+id/rd_menu_bind"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/bind"
                    android:text="@string/health_news" />

                <RadioButton
                    android:id="@+id/rd_menu_message"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/message"
                    android:text="@string/everyday_event" />
            </RadioGroup>
    </RelativeLayout>

        <View
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"
            android:layout_alignTop="@+id/rd_bk"/>

    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />

</android.support.v4.widget.DrawerLayout>
